--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,2 @@
-
 Flask==3.1.0
-Flask-SQLAlchemy==3.1.1
-itsdangerous==2.2.0
-Jinja2==3.1.5
-PyMySQL==1.1.1
-SQLAlchemy==2.0.36
-Werkzeug==3.1.3
-mysql-connector
+mysql-connector-python==9.1.0
